# Geometrie_discrete

./: README.md
dupe/TP7/: Contour.cpp  Contour.h  Makefile  tp7  tp7-MABILY-Johan.cpp  tp7.txt
thiel/tp1/: ex01-transfos  gd1-tp.txt  images.tgz  tp1-MATTIOLI  tp1-MATTIOLI.cpp
thiel/tp1/IMAGES/: joint_J5.pgm  joint_K2.pgm  joint_K8.pgm
thiel/tp2/: ex02-transfos  ex02-transfos.cpp  gd2-tp.txt  tp2-MATTIOLI  tp2-MATTIOLI.cpp
thiel/tp2/IMAGES/: joint_J1.pgm  joint_J3.pgm  joint_K7.pgm
thiel/tp3/: gd3-tp.txt  old_tp3-MATTIOLI  old_tp3-MATTIOLI.cpp  tp3-MATTIOLI  tp3-MATTIOLI.cpp
thiel/tp3/IMAGES/: joint_J7.pgm
thiel/tp4/: gd4-tp.txt  old_tp4-MATTIOLI.cpp  tp4-MATTIOLI.cpp
thiel/tp4/IMAGES/: joint_J6.pgm  joint_K4.pgm  joint_K6.pgm
thiel/tp5/: #tp5-MATTIOLI.cpp#  gd5-tp.txt  old-tp5-MATTIOLI  old-tp5-MATTIOLI.cpp  tp5-MATTIOLI  tp5-MATTIOLI.cpp
thiel/tp5/IMAGES/: joint_J4.pgm
thiel/tp6/: Makefile  gd6-tp.txt  old-tp6-MATTIOLI.cpp  tp6-MATTIOLI  tp6-MATTIOLI.cpp  tp6_MATTIOLI
thiel/tp6/IMAGES/: joint_J2.pgm  joint_K1.pgm
tp_dgtal/: cmds.txt
tp_dgtal/libQGLViewer-2.7.1/QGLViewer/: Makefile  libQGLViewer-qt5.prl  libQGLViewer-qt5.so.2.7.1  ui_ImageInterface.h  ui_VRenderInterface.h
tp_dgtal/libQGLViewer-2.7.1/build-QGLViewer-Desktop-Debug/: Makefile
tp_dgtal/libQGLViewer-2.7.1/designerPlugin/: qglviewerPlugin.Qt3.cpp  qglviewerPlugin.Qt3.h  qglviewerPlugin.cpp  qglviewerPlugin.h
tp_dgtal/startCode/: .#MakeLists.txt  CMakeLists.txt  CMakeLists.txt~  ConfigExamples.h  ConfigExamples.h.in  startCode.cpp  startCode.cpp~
(+175 files in other folders)
